Remove keyboard shortcut, simplify styling

--- a/src/common/popup.html
+++ b/src/common/popup.html
@@ -5,8 +5,8 @@
 	    <style type="text/css">
 
 	    	body {
-	    		color: #FFF;
-	    		background: rgb(78,89,105);
+	    		color: #222;
+	    		background: #FFF;
 	    		font-size: 16px;
 	    		font-family: "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
 	    		line-height: 30px;
