--- a/src/common/popup.html
+++ b/src/common/popup.html
@@ -30,16 +30,18 @@
 					position: relative;
 					margin: -5px;
 					padding: 5px;
-					background: #5082BC;
 					cursor: pointer;
 					outline: none;
-					color: #FFF !important;
 					text-decoration: none !important;
 					border-radius: 2px;
+					background: #FFF;
+					border: 1px solid #ac0000;
+					color: #ac0000;
 				}
 
 				.button a:hover {
-					background: #3e6ea5;
+					background: #ac0000;
+					color: #FFF !important;
 				}
 
 	    </style>
